base/cart/istio/authorizationpolicy.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: cartservice
  namespace: cartservice
spec:
  selector:
    matchLabels:
      app: cartservice
  action: ALLOW
  rules:
    - from:
        - source:
            principals:
              [
                "cluster.local/ns/frontend/sa/frontend",
                "cluster.local/ns/checkoutservice/sa/checkoutservice",
              ]
